--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Mayank Kumar Singh's Home Page">
-<meta name="author" content="Mayank Kumar Singh">
+<meta name="description" content="Priyanka Dey's Home Page">
+<meta name="author" content="Priyanka Dey">
 <meta charset="UTF-8">
 <meta name="keywords" content="machine learning, artificial intelligence, coding">
 
@@ -52,7 +52,7 @@
 		<div class="col-md-8">
 			<div class="row">
 				<div class="col">
-					<h3 style="color:white; padding-bottom: 0px; margin-bottom: 0px; text-align: left">Mayank Kumar Singh</h3>
+					<h3 style="color:white; padding-bottom: 0px; margin-bottom: 0px; text-align: left">Priyanka Dey</h3>
 				</div>
 			</div>
 			<div class="row mt-3 mb-4">
