--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <meta charset="UTF-8">
 <meta name="keywords" content="machine learning, artificial intelligence, coding">
 
-<meta property="og:title" content="Mayank's HomePage">
+<meta property="og:title" content="Priyanka's HomePage">
 <meta property="og:image" content="/static/Images/Profile/profileCircular512X512.png">
-<meta property="og:description" content="Mayank Kumar Singh's Home Page">
+<meta property="og:description" content="Priyanka Dey's Home Page">
 
-<title>Mayank Kumar Singh</title>
+<title>Priyanka Dey</title>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110954752-1"></script>
